--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -170,6 +170,8 @@ p {
 
     ul {
         margin: auto;
+        //NEW
+        list-style: none;
     }
 }
 
@@ -588,7 +590,7 @@ XIV. Nav
     width: 100%;
     margin: 0;
     height: 40px;
-    box-shadow: 0 0 2px 1px rgb(154, 154, 154);
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.5);
 }
 
 .hc-nav-wrapper {
