--- a/static/sass/custom.scss
+++ b/static/sass/custom.scss
@@ -8,3 +8,51 @@
 // \_____|  \__,_| |___/  \__|  \___/  |_| |_| |_|   |___/  \__|  \__, | |_|  \___| |___/
 //                                                                 __/ |
 //                                                                |___/
+
+#hc-nav-header {
+    display: block;
+    background: #111;
+}
+
+#hc-nav-head {
+    font-family: $sans;
+    text-transform: none;
+}
+
+#masthead-container {
+    display: none;
+}
+
+#div-gpt-ad-4 {
+    display: none;
+}
+
+#hc-hero {
+    margin-top: 0;
+}
+
+// text after video
+.embed-media-details {
+    display: none;
+}
+
+// video share icons
+.mi-video-utilty-bar.share-icons {
+    display: none;
+}
+
+// container for video
+.embed-media.inline-video {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+// edits play button
+.jwplayer.jw-skin-mi-video .jw-display-icon-container {
+    border: none;
+}
+
+.jwplayer.jw-skin-mi-video:hover .jw-display-icon-container .jw-icon-display {
+    color: none;
+}
