--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1152,9 +1152,13 @@ XV. Loader
   40% {
     -webkit-transform: scale(1);
     transform: scale(1); } }
+.col-sm-12 {
+  padding-right: 0;
+  padding-left: 0; }
+
 #hc-nav-header {
   display: block;
-  background: #111; }
+  background: #111111; }
 
 #hc-nav-head {
   font-family: "McClatchy Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -1168,6 +1172,12 @@ XV. Loader
 
 #hc-hero {
   margin-top: 0; }
+
+#footer {
+  display: none; }
+
+[id*="content-body-"] {
+  background: #ccc; }
 
 .embed-media-details {
   display: none; }
@@ -1185,5 +1195,71 @@ XV. Loader
 
 .jwplayer.jw-skin-mi-video:hover .jw-display-icon-container .jw-icon-display {
   color: none; }
+
+.verse-player-embed {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%; }
+
+.verse-player-embed embed,
+.verse-player-embed iframe,
+.verse-player-embed object {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+figure {
+  margin-top: 0; }
+
+.share-icons {
+  max-width: 100%;
+  float: right; }
+  .share-icons li {
+    margin-top: 0.4rem; }
+    .share-icons li .glyphicon {
+      background: none; }
+      .share-icons li .glyphicon a:hover {
+        color: inherit;
+        display: none; }
+
+.hc-breakout-section {
+  color: #111; }
+
+.ad {
+  display: none; }
+
+#hc-parallax-wrapper {
+  position: absolute;
+  height: 100%;
+  width: 100%; }
+
+.hc-panels {
+  position: relative;
+  width: 100%;
+  z-index: 1000; }
+
+#hc-hero-wrapper {
+  height: 100%; }
+
+#hc-hero {
+  position: fixed;
+  color: red;
+  top: 40px;
+  left: 0;
+  z-index: -99;
+  width: 100%;
+  height: 100%; }
+  #hc-hero img {
+    width: 100%; }
+
+#hc-panel1 {
+  margin-top: calc(100% - 9%);
+  background: yellow;
+  min-height: 1500px;
+  height: 100%; }
 
 /*# sourceMappingURL=custom.css.map */
