--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1242,19 +1242,28 @@ figure {
   width: 100%;
   z-index: 1000; }
 
-#hc-hero-wrapper {
-  height: 100%; }
-
 #hc-hero {
-  position: fixed;
-  color: red;
-  top: 40px;
-  left: 0;
-  z-index: -99;
-  width: 100%;
-  height: 100%; }
+  background: black; }
   #hc-hero img {
-    width: 100%; }
+    opacity: 0.6;
+    margin-bottom: 0; }
+  #hc-hero h1 {
+    position: absolute;
+    color: white;
+    text-transform: uppercase;
+    font-family: "McClatchy Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: bold;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+    font-size: 10rem;
+    line-height: 10.5rem;
+    z-index: 9999;
+    left: 0;
+    right: 0;
+    text-align: center;
+    top: 25%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
 
 #hc-panel1 {
   margin-top: calc(100% - 9%);
