adds old nav with big head

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,4 +1,5 @@
-.reset, .hc-head, .hc-deck, .hc-byline, .hc-date, .hc-section-head, .hc-subhead, .hc-quote, .hc-attribution, .hc-note, .hc-refer-head, .hc-refer-deck {
+@charset "UTF-8";
+.reset, .hc-head, .hc-deck, .hc-byline, .hc-date, .hc-section-head, .hc-subhead, .hc-quote, .hc-attribution, .hc-note, .hc-refer-head, .hc-refer-deck, h1 {
   margin: 0;
   padding: 0;
   border: 0;
@@ -28,6 +29,17 @@
   text-align: center;
   margin: 0 auto;
   display: block; }
+
+.hc-vertical-align {
+  max-width: 650px;
+  margin: 0 auto;
+  position: absolute;
+  top: 35%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  left: 0;
+  right: 0; }
 
 .hc-primary-color {
   color: black; }
@@ -1152,17 +1164,53 @@ XV. Loader
   40% {
     -webkit-transform: scale(1);
     transform: scale(1); } }
+html {
+  background: #111; }
+
 .col-sm-12 {
   padding-right: 0;
   padding-left: 0; }
 
 #hc-nav-header {
   display: block;
-  background: #111111; }
+  background: #111111;
+  height: 4rem; }
 
-#hc-nav-head {
+.hc-nav-wrapper {
+  height: 100%; }
+
+#hc-nav-brand {
+  width: 10%;
+  color: white;
   font-family: "McClatchy Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
-  text-transform: none; }
+  font-weight: bold;
+  text-align: center;
+  font-size: 2rem;
+  padding-top: 3.6rem; }
+
+#hc-nav-title {
+  width: 80%;
+  padding-left: 2rem; }
+
+#hc-nav-social {
+  padding-top: 3rem;
+  width: 10%; }
+
+.nav-section {
+  float: left;
+  display: inline-block;
+  height: 100%; }
+
+.share-icons {
+  max-width: 100%;
+  float: right; }
+  .share-icons li {
+    margin-top: 0.4rem; }
+    .share-icons li .glyphicon {
+      background: none; }
+      .share-icons li .glyphicon a:hover {
+        color: inherit;
+        display: none; }
 
 #masthead-container {
   display: none; }
@@ -1170,11 +1218,68 @@ XV. Loader
 #div-gpt-ad-4 {
   display: none; }
 
-#hc-hero {
-  margin-top: 0; }
+#hc-intro p {
+  font-size: 1.5rem;
+  line-height: 2.4rem;
+  font-family: "McClatchy Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+  color: rgba(255, 255, 255, 0.9);
+  max-width: 800px;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5); }
+
+h1 {
+  color: rgba(255, 255, 255, 0.9);
+  text-transform: uppercase;
+  font-family: "McClatchy Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: bold;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+  font-size: 6rem;
+  line-height: 6rem;
+  z-index: 9999;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding-top: 5.3rem; }
+
+h2 {
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+  font-family: "McClatchy Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.9);
+  margin-bottom: 2rem; }
 
 #footer {
   display: none; }
+
+.btn-lg {
+  display: block;
+  padding-top: 0.2rem;
+  padding-bottom: 0;
+  margin: 0 auto;
+  background: #111;
+  height: 5rem;
+  border-color: #111;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.9);
+  font-family: "McClatchy Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: bold;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+  line-height: 0; }
+  .btn-lg:hover {
+    background: #111;
+    border: #111;
+    color: rgba(255, 255, 255, 0.9); }
+  .btn-lg:focus {
+    outline: none;
+    background: #111;
+    border: #111;
+    color: rgba(255, 255, 255, 0.9); }
+
+ﬁ
+.hc-fluid-img {
+  max-width: 100%; }
 
 [id*="content-body-"] {
   background: #ccc; }
@@ -1215,17 +1320,6 @@ XV. Loader
 figure {
   margin-top: 0; }
 
-.share-icons {
-  max-width: 100%;
-  float: right; }
-  .share-icons li {
-    margin-top: 0.4rem; }
-    .share-icons li .glyphicon {
-      background: none; }
-      .share-icons li .glyphicon a:hover {
-        color: inherit;
-        display: none; }
-
 .hc-breakout-section {
   color: #111; }
 
@@ -1243,32 +1337,70 @@ figure {
   z-index: 1000; }
 
 #hc-hero {
-  background: black; }
+  background: black;
+  background-image: url("../img/vfx-hero.png");
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  margin-right: 0;
+  margin-left: 0;
+  margin-bottom: 0;
+  margin-top: 4rem;
+  box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.5); }
   #hc-hero img {
     opacity: 0.6;
     margin-bottom: 0; }
-  #hc-hero h1 {
-    position: absolute;
-    color: white;
-    text-transform: uppercase;
-    font-family: "McClatchy Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-weight: bold;
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-    font-size: 10rem;
-    line-height: 10.5rem;
-    z-index: 9999;
-    left: 0;
-    right: 0;
-    text-align: center;
-    top: 25%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%); }
 
 #hc-panel1 {
   margin-top: calc(100% - 9%);
   background: yellow;
   min-height: 1500px;
   height: 100%; }
+
+.play {
+  display: block;
+  width: 0;
+  height: 0;
+  border-top: 50px solid transparent;
+  border-bottom: 50px solid transparent;
+  border-left: 60px solid rgba(255, 255, 255, 0.5);
+  margin: 5rem auto 8rem;
+  position: relative;
+  z-index: 1;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  left: 10px; }
+  .play:before {
+    content: '';
+    position: absolute;
+    top: -75px;
+    left: -115px;
+    bottom: -75px;
+    right: -35px;
+    border-radius: 50%;
+    border: 10px solid rgba(255, 255, 255, 0.5);
+    z-index: 2;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s; }
+  .play:after {
+    content: '';
+    opacity: 0;
+    transition: opacity 0.6s;
+    -webkit-transition: opacity 0.6s;
+    -moz-transition: opacity 0.6s; }
+  .play:focus, .play:hover {
+    border-left: 60px solid rgba(255, 255, 255, 0.8); }
+    .play:focus:before, .play:hover:before {
+      transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      border: 10px solid rgba(255, 255, 255, 0.8); }
+  .play.active {
+    border-color: transparent; }
 
 /*# sourceMappingURL=custom.css.map */
