--- a/static/sass/_extendables.scss
+++ b/static/sass/_extendables.scss
@@ -32,3 +32,15 @@
     margin: 0 auto;
     display: block;
 }
+
+.hc-vertical-align {
+    max-width: 650px;
+    margin: 0 auto;
+    position: absolute;
+    top: 35%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+}
