--- a/static/sass/custom.scss
+++ b/static/sass/custom.scss
@@ -1,5 +1,4 @@
-@import "base.scss";
-//  _____                 _                                 _             _
+@import "base.scss"; //  _____                 _                                 _             _
 // / ____|               | |                               | |           | |
 // | |       _   _   ___  | |_    ___    _ __ ___      ___  | |_   _   _  | |   ___   ___
 // | |      | | | | / __| | __|  / _ \  | '_ ` _ \    / __| | __| | | | | | |  / _ \ / __|
@@ -7,6 +6,10 @@
 // \_____|  \__,_| |___/  \__|  \___/  |_| |_| |_|   |___/  \__|  \__, | |_|  \___| |___/
 //                                                                 __/ |
 //                                                                |___/
+
+html {
+   background: #111;
+}
 
 .col-sm-12 {
     padding-right: 0;
@@ -16,11 +19,55 @@
 #hc-nav-header {
     display: block;
     background: rgba(17, 17, 17, 1);
+    height: 4rem;
 }
 
-#hc-nav-head {
-    font-family: $sans;
-    text-transform: none;
+.hc-nav-wrapper {
+   height: 100%;
+}
+
+#hc-nav-brand {
+   width: 10%;
+   color: white;
+   font-family: $sans;
+   font-weight: bold;
+   text-align: center;
+   font-size: 2rem;
+   padding-top: 3.6rem;
+}
+
+#hc-nav-title {
+   width: 80%;
+   padding-left: 2rem;
+}
+
+#hc-nav-social {
+   padding-top: 3rem;
+   width: 10%;
+}
+
+.nav-section {
+   float: left;
+   display: inline-block;
+   height: 100%;
+}
+
+.share-icons {
+    max-width: 100%;
+    float: right;
+
+    li {
+        margin-top: 0.4rem;
+
+        .glyphicon {
+            background: none;
+
+            a:hover {
+                color: inherit;
+                display: none;
+            }
+        }
+    }
 }
 
 #masthead-container {
@@ -31,36 +78,110 @@
     display: none;
 }
 
-#hc-hero {
-    margin-top: 0;
+#hc-intro {
+   p {
+      font-size: 1.5rem;
+      line-height: 2.4rem;
+      font-family: $sans;
+      color: rgba(255, 255, 255, 0.9);
+      max-width: 800px;
+      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+   }
+}
+
+h1 {
+   @extend .reset;
+   color: rgba(255, 255, 255, 0.9s);
+   text-transform: uppercase;
+   font-family: $sans;
+   font-weight: bold;
+   text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+   font-size: 6rem;
+   line-height: 6rem;
+   z-index: 9999;
+   left: 0;
+   right: 0;
+   text-align: center;
+   padding-top: 5.3rem;
+}
+
+h2 {
+   text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+   font-family: $sans;
+   font-weight: bold;
+   font-size: 2rem;
+   // text-transform: uppercase;
+   text-align: center;
+   color: rgba(255, 255, 255, 0.9);
+   margin-bottom: 2rem;
 }
 
 #footer {
     display: none;
 }
 
+
+.btn-lg {
+    display: block;
+    padding-top: 0.2rem;
+    padding-bottom: 0;
+    margin: 0 auto;
+    background: #111;
+    height: 5rem;
+    border-color: #111;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.9);
+     font-family: $sans;
+     font-weight: bold;
+     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+     line-height: 0;
+
+    &:hover {
+      background: #111;
+      border: #111;
+      color: rgba(255, 255, 255, 0.9);
+   }
+
+   &:focus {
+      outline: none;
+      background: #111;
+      border: #111;
+      color: rgba(255, 255, 255, 0.9);
+   }
+}
+ﬁ
+.hc-fluid-img {
+   max-width: 100%;
+}
+
 [id*="content-body-"] {
     background: #ccc;
 }
 // text after video
+
 .embed-media-details {
     display: none;
 }
 // video share icons
+
 .mi-video-utilty-bar.share-icons {
     display: none;
 }
 // container for video
+
 .embed-media.inline-video {
     border: 0;
     margin: 0;
     padding: 0;
 }
 // edits play button
+
 .jwplayer.jw-skin-mi-video .jw-display-icon-container {
     border: none;
 }
 // changes color of play triangle on hover
+
 .jwplayer.jw-skin-mi-video:hover .jw-display-icon-container .jw-icon-display {
     color: none;
 }
@@ -69,6 +190,7 @@
 //     color:
 // }
 // verse player for wireframing
+
 .verse-player-embed {
     position: relative;
     padding-bottom: 56.25%;
@@ -91,28 +213,11 @@ figure {
     margin-top: 0;
 }
 
-.share-icons {
-    max-width: 100%;
-    float: right;
-
-    li {
-        margin-top: 0.4rem;
-
-        .glyphicon {
-            background: none;
-
-            a:hover {
-                color: inherit;
-                display: none;
-            }
-        }
-    }
-}
-
 .hc-breakout-section {
     color: #111;
 }
 // maybe convert to JS?
+
 .ad {
     display: none;
 }
@@ -134,31 +239,25 @@ figure {
     width: 100%;
     z-index: 1000;
 }
+
 #hc-hero {
     background: black;
+    background-image: url("../img/vfx-hero.png");
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    margin-right: 0;
+    margin-left: 0;
+    margin-bottom: 0;
+    margin-top: 4rem;
+        box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.5);
 
     img {
         opacity: 0.6;
         margin-bottom: 0;
-    }
-
-    h1 {
-        position: absolute;
-        color: white;
-        text-transform: uppercase;
-        font-family: $sans;
-        font-weight: bold;
-        text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-        font-size: 10rem;
-        line-height: 10.5rem;
-        z-index: 9999;
-        left: 0;
-        right: 0;
-        text-align: center;
-        top: 25%;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
     }
 }
 
@@ -167,4 +266,75 @@ figure {
     background: yellow;
     min-height: 1500px;
     height: 100%;
+}
+// play button for video
+$size: 50px;
+$ratio: 1.2;
+$transition-time: 0.3s;
+
+.play {
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: $size solid transparent;
+    border-bottom: $size solid transparent;
+    border-left: ($size*$ratio) solid rgba(255, 255, 255, 0.5);
+    margin: 5rem auto 8rem;
+    position: relative;
+    z-index: 1;
+    transition: all $transition-time;
+    -webkit-transition: all $transition-time;
+    -moz-transition: all $transition-time;
+    left: ($size*0.2);
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: ($size*-1.5);
+        left: ($size*-2.3);
+        bottom: ($size*-1.5);
+        right: ($size*-0.7);
+        border-radius: 50%;
+        border: ($size*0.2) solid rgba(255, 255, 255, 0.5);
+        z-index: 2;
+        transition: all $transition-time;
+        -webkit-transition: all $transition-time;
+        -moz-transition: all $transition-time;
+    }
+
+    &:after {
+        content: '';
+        opacity: 0;
+        transition: opacity ($transition-time * 2);
+        -webkit-transition: opacity ($transition-time * 2);
+        -moz-transition: opacity ($transition-time * 2);
+    }
+
+    &:focus,
+    &:hover {
+        border-left: ($size*$ratio) solid rgba(255, 255, 255, 0.8);
+        &:before {
+            transform: scale(1.1);
+            -webkit-transform: scale(1.1);
+            -moz-transform: scale(1.1);
+            border: ($size*0.2) solid rgba(255, 255, 255, 0.8);
+        }
+    }
+
+    &.active {
+        border-color: transparent;
+
+        // &:after {
+        //     content: '';
+        //     opacity: 1;
+        //     width: ($size);
+        //     height: ($size*1.6);
+        //     background: $foreground;
+        //     position: absolute;
+        //     right: ($size*0.1);
+        //     top: ($size*-0.8);
+        //     border-left: ($size*0.4) solid $foreground;
+        //     box-shadow: inset ($size*0.6) 0 0 0 $background;
+        // }
+    }
 }
