--- a/static/sass/_extendables.scss
+++ b/static/sass/_extendables.scss
@@ -35,6 +35,7 @@
 
 .hc-vertical-align {
     max-width: 650px;
+    width: 90%;
     margin: 0 auto;
     position: absolute;
     top: 35%;
@@ -43,4 +44,8 @@
     transform: translateY(-50%);
     left: 0;
     right: 0;
+
+    @media (max-width: 768px) {
+       top: 45%;
+    }
 }
