--- a/static/sass/custom.scss
+++ b/static/sass/custom.scss
@@ -8,7 +8,7 @@
 //                                                                |___/
 
 html {
-   background: #111;
+    background: #111;
 }
 
 .col-sm-12 {
@@ -23,12 +23,20 @@ html {
 }
 
 #hc-nav-head {
-   text-transform: none;
-   font-family: $sans;
+    text-transform: none;
+    font-family: $sans;
+
+    a {
+        color: white;
+
+        &:visited, &:hover, &:focus, &:active {
+            color: white;
+        }
+    }
 }
 
 .hc-nav-wrapper {
-   height: 100%;
+    height: 100%;
 }
 
 .share-icons {
@@ -58,61 +66,57 @@ html {
 }
 
 #hc-intro {
-   p {
-      font-size: 1.5rem;
-      line-height: 2.4rem;
-      font-family: $sans;
-      color: rgba(255, 255, 255, 0.9);
-      max-width: 800px;
-      text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
-
-      @media (max-width: 768px) {
-         font-size: 1.3rem;
-         line-height: 2.1rem;
-      }
-   }
+    p {
+        font-size: 1.5rem;
+        line-height: 2.4rem;
+        font-family: $sans;
+        color: rgba(255, 255, 255, 0.9);
+        max-width: 800px;
+        text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+        @media (max-width: 768px) {
+            font-size: 1.3rem;
+            line-height: 2.1rem;
+        }
+    }
 }
 
 h1 {
-   @extend .reset;
-   color: rgba(255, 255, 255, 0.9s);
-   text-transform: uppercase;
-   font-family: $sans;
-   font-weight: bold;
-   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
-   font-size: 6rem;
-   line-height: 6rem;
-   z-index: 9999;
-   left: 0;
-   right: 0;
-   text-align: center;
-   padding-top: 5.3rem;
-
-   @media (max-width: 768px) {
-      font-size: 4.2rem;
-      line-height: 4.6rem;
-   }
+    @extend .reset;
+    color: rgba(255, 255, 255, 0.9s);
+    text-transform: uppercase;
+    font-family: $sans;
+    font-weight: bold;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+    font-size: 6rem;
+    line-height: 6rem;
+    z-index: 9999;
+    left: 0;
+    right: 0;
+    text-align: center;
+    padding-top: 5.3rem;
+    @media (max-width: 768px) {
+        font-size: 4.2rem;
+        line-height: 4.6rem;
+    }
 }
 
 h2 {
-   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
-   font-family: $sans;
-   font-weight: bold;
-   font-size: 2rem;
-   // text-transform: uppercase;
-   text-align: center;
-   color: rgba(255, 255, 255, 0.9);
-   margin-bottom: 2rem;
-
-   @media (max-width: 768px) {
-      font-size: 1.8rem;
-   }
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+    font-family: $sans;
+    font-weight: bold;
+    font-size: 2rem;
+    // text-transform: uppercase;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.9);
+    margin-bottom: 2rem;
+    @media (max-width: 768px) {
+        font-size: 1.8rem;
+    }
 }
 
 #footer {
     display: none;
 }
-
 
 .btn-lg {
     display: block;
@@ -125,27 +129,27 @@ h2 {
     font-weight: bold;
     text-transform: uppercase;
     color: rgba(255, 255, 255, 0.9);
-     font-family: $sans;
-     font-weight: bold;
-     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-     line-height: 0;
+    font-family: $sans;
+    font-weight: bold;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+    line-height: 0;
 
     &:hover {
-      background: #111;
-      border: #111;
-      color: rgba(255, 255, 255, 0.9);
-   }
+        background: #111;
+        border: #111;
+        color: rgba(255, 255, 255, 0.9);
+    }
 
-   &:focus {
-      outline: none;
-      background: #111;
-      border: #111;
-      color: rgba(255, 255, 255, 0.9);
-   }
+    &:focus {
+        outline: none;
+        background: #111;
+        border: #111;
+        color: rgba(255, 255, 255, 0.9);
+    }
 }
-ﬁ
-.hc-fluid-img {
-   max-width: 100%;
+
+ﬁ .hc-fluid-img {
+    max-width: 100%;
 }
 
 [id*="content-body-"] {
@@ -211,7 +215,7 @@ figure {
 }
 // maybe convert to JS?
 
-.ad {
+.ad, #leaderboard-ad {
     display: none;
 }
 // parallaxing
@@ -235,18 +239,18 @@ figure {
 
 #hc-hero {
     background: black;
-    background-image: url("../img/vfx-hero.png");
+    background-image: url("http://www.mcclatchydc.com/news/n3jo3s/picture128695919/binary/vfx-hero.png");
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     height: 100vh;
-    min-height: 750px;
-    margin-right: 0;
-    margin-left: 0;
-    margin-bottom: 0;
-    margin-top: 4rem;
-        box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.5);
+    min-height: 1000px;
+    margin: 4rem 0 0;
+    box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    overflow: auto;
+    left: 0;
 
     img {
         opacity: 0.6;
@@ -259,4 +263,36 @@ figure {
     background: yellow;
     min-height: 1500px;
     height: 100%;
+}
+
+.mcclatchy-embed {
+    display: none;
+    position: absolute;
+    top: 0;
+    padding: 40px 0 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    width: 100%;
+}
+
+.mcclatchy-embed iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.container {
+    width: 100%;
+}
+
+.embed-container {
+    display: none;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    margin-top: 40px;
 }
